--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 
 <body>
     <div id="root"></div>
-
-    <script src="main.bundle.js"></script>
+    <noscript>
+        You need to enable JavaScript to run this app.
+    </noscript>
+    <script src="../dist/bundle.js"></script>
 </body>
 
 </html>
